# KaagapAI

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  alerts.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
datasets/: clinical_qa_25.json  clinical_qa_50.json
docs/architecture/: README.md  agentic-rag-flow.md  classical-rag-flow.md  pipeline-comparison.md
frontend/: app.js  index.html  styles.css
grafana/provisioning/dashboards/: dashboard.yml  kaagapai.json  medquery.json
grafana/provisioning/datasources/: prometheus.yml
k6/: load_test.js
scripts/: check_thresholds.py  deduplicate_documents.py  download_clinical_pdfs.py  download_documents.sh  download_medquad.py  generate_sample_docs.py  init_db.sql  reindex_documents.py  run_evals.py  setup_offline.py  test_db_connection.py
src/: __init__.py  main.py  worker.py
src/api/: __init__.py  auth.py
src/db/: __init__.py  models.py  postgres.py
src/evaluation/: __init__.py  runner.py
src/llm/: __init__.py  ollama_client.py  prompt_templates.py  response_parser.py
src/observability/: __init__.py  metrics.py
src/pipelines/: agentic.py  classical.py  prompts.py
src/rag/: __init__.py  cache.py  chunker.py  embedding.py  reranker.py  retriever.py  web_search.py
src/security/: __init__.py  input_validation.py  pii_redaction.py  rate_limiter.py
tests/: __init__.py  conftest.py  test_agentic_pipeline.py  test_api.py  test_api_extended.py  test_auth.py  test_chunker.py  test_classical_pipeline.py  test_compare_endpoint.py  test_db.py  test_embedding.py  test_evaluation.py  test_integration.py  test_llm.py  test_observability.py  test_query_cache.py  test_rag_enhancements.py  test_reranker.py  test_retriever.py  test_security.py  test_worker.py
